Ajout de mon cv

--- a/hello.html
+++ b/hello.html
@@ -15,6 +15,9 @@
 		<div id="top-banner">
 			Bienvenue dans cette formation GIT !
 		</div>
-		
+
+		<div>
+			<p> Je m'appelle Didier Corlay et je suis Docteur en Pharmacie, professeur de Yoga, geobiologue et conseiller en Ayurveda  </p>
+		</div>
 	
 </body></html>
