ajout de ma récompense

--- a/hello.html
+++ b/hello.html
@@ -16,8 +16,22 @@
 			Bienvenue dans cette formation GIT !
 		</div>
 
+	    <!-- Ma description -->
+        <div>
+			<h1>Ma description </h1>
+		</div>
+
 		<div>
 			<p> Je m'appelle Didier Corlay et je suis Docteur en Pharmacie, professeur de Yoga, geobiologue et conseiller en Ayurveda  </p>
+
+		<<!-- Ma récompense -->
+        <div>
+			<h1>Ma récompense </h1>
 		</div>
+
+		<div>
+			<p> en construction... </p>
+		</div>
+/div>
 	
 </body></html>
