ajout d'un gist

--- a/hello.html
+++ b/hello.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html lang="fr"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        
-        <title>Formation GIT</title>
-        
-		
-		<link rel="stylesheet" href="./style.css">
 
+<html>
+
+	<head>
+        <html lang="fr"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <title>Formation GIT</title>
+		<link rel="stylesheet" href="./style.css">
 	</head>
 	
-
 	<body>
 
 		<!-- TITRE -->
@@ -23,8 +22,9 @@
 
 		<div>
 			<p> Je m'appelle Didier Corlay et je suis Docteur en Pharmacie, professeur de Yoga, geobiologue et conseiller en Ayurveda  </p>
+        </div>
 
-		<<!-- Ma récompense -->
+		<!-- Ma récompense -->
         <div>
 			<h1>Ma récompense </h1>
 		</div>
@@ -32,6 +32,17 @@
 		<div>
 			<p> en construction... </p>
 		</div>
-/div>
-	
-</body></html>
+
+		<!-- Mon gist -->
+        <div>
+			<h1>Mon gist </h1>
+		</div>
+
+		<div>
+			<p> <script src="https://gist.github.com/scarabe22/5eabf6101411e6ecc9596f4b8fea02c0.js"></script> </p>
+		</div>
+
+
+
+	</body>
+</html>
