--- a/hello.html
+++ b/hello.html
@@ -30,7 +30,7 @@
 		</div>
 
 		<div>
-			<p> en construction... </p>
+			<p> <img src="images/medal_bronze.png"> </p>
 		</div>
 
 		<!-- Mon gist -->
